[project]
name = "lm-proxy"
version = "2.1.1"
description = "LM-Proxy is an OpenAI-compatible http proxy server for inferencing various LLMs capable of working with Google, Anthropic, OpenAI APIs, local PyTorch inference, etc."
readme = "README.md"
keywords = ["llm", "large language models", "ai", "gpt", "openai", "proxy", "http", "proxy-server"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ai-microcore~=4.4.4",
    "fastapi>=0.121.3,<1",
    "uvicorn>=0.22.0",
    "typer>=0.16.1",
    "requests~=2.32.3",
    "pydantic~=2.12.3",
]

requires-python = ">=3.11,<4"

authors = [
    { name = "Vitalii Stepanenko", email = "mail@vitaliy.in" },
]
maintainers = [
    { name = "Vitalii Stepanenko", email = "mail@vitaliy.in" },
]
license = { file = "LICENSE" }

[project.urls]
"Source Code" = "https://github.com/Nayjest/lm-proxy"

[project.entry-points."config.loaders"]
toml = "lm_proxy.config_loaders:load_toml_config"
py = "lm_proxy.config_loaders:load_python_config"
yml = "lm_proxy.config_loaders:load_yaml_config"
yaml = "lm_proxy.config_loaders:load_yaml_config"
json = "lm_proxy.config_loaders:load_json_config"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [{ include = "lm_proxy"}]

[tool.poetry.group.test.dependencies]
pytest = "~=8.4.2"
pytest-asyncio = "~=1.2.0"
pytest-cov = "~7.0.0"

[tool.poetry.scripts]
lm-proxy = "lm_proxy.app:cli_app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
